--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
+  "scripts": {
+    "clean": "rm -rf dist && echo 'Done.'",
+    "dev": "bun src/index.js"
+  },
   "dependencies": {
     "axios": "^1.7.4",
     "cheerio": "^1.0.0",
